jEdit 5.5 version history
       (changes since jEdit 5.4.0)
:encoding=UTF-8:

{{{ Version 5.5pre1

Thanks to AdamS, Wim West, M. Cesar R. Lacruz, Egor Abramovich,
Hrotkó Gábor, Alan Ezust, Dale Anson and Jesse Pavel for contributing to this
release.

{{{ Bug Fixes

- command line behavior for +line fixed (Patch #590 - Wim West)

- Autosave Untitled Buffers fixed (FR# 501, Patch #596 - Hrotkó Gábor)

- Fixed a number of bugs in the new jEdit printing system (Dale Anson)

- Add missing local properties to Insert_Buffer_Properties macro
  (Patch #599 - Jesse Pavel)
}}}
{{{ UI Improvements


}}}
{{{ Miscellaneous

- FR#506, FR#536: Autosaves are now saved to the Backup directory.
  (Alan Ezust, Hrotkó Gábor)

- FR#175: Saving and backup option, "Never Mark Untitled Buffers Dirty" changed
  to "Close Dirty Untitled buffers without confirmation" (Alan Ezust)

}}}
{{{ API Changes


}}}
{{{ Editing

- Patch #593 - Various small patches to modes (AdamS)

- Patch #592 - for groovy mode (Egor Abramovich)

- Patch #595 - New Assembly-arm32 edit mode (M. Cesar R. Lacruz)

- Updated java-module-info mode (Dale Anson)

}}}

}}}

jEdit buffer local properties:
:maxLineLen=80:wrap=hard:autoIndent=simple:noTabs=true:indentSize=2:tabSize=2:
:folding=explicit:collapseFolds=2: