@@ -201,6 +201,43 @@ public class Log
 	{
 		Log.beepOnOutput = beepOnOutput;
 	} //}}}
+	
+	public static void setMaxLines(int newMax)
+	{
+		if (newMax == MAXLINES)
+			return;
+		
+		// find last non-null entry in log array
+		int lineCount = 0;
+		for (int i = 0; i < log.length; i++) 
+		{
+			if (log[i] == null)
+				break;
+			++lineCount;
+		}
+		
+		// copy entries from log to newLog
+		String[] newLog = new String[newMax];
+		if (newMax > lineCount)
+		{
+			System.arraycopy(log, 0, newLog, 0, lineCount);
+		}
+		else
+		{
+			// lineCount > newMax
+			System.arraycopy(log, lineCount - newMax, newLog, 0, newMax);
+			logLineCount = newMax;
+		}
+		
+		MAXLINES = newMax;
+		log = newLog;
+		listModel.update(lineCount, true);
+	}
+	
+	public static int getMaxLinex()
+	{
+		return MAXLINES;	
+	}
 
 	//{{{ flushStream() method
 	/**
@@ -344,7 +381,7 @@ public class Log
 
 	//{{{ Instance variables
 	private static final Object LOCK;
-	private static final String[] log;
+	private static String[] log;
 	private static int logLineCount;
 	private static boolean wrap;
 	private static int level;
